kubernetes/apps/network/external-service/centauri-carbon/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-centauri-carbon
  labels:
    kubernetes.io/service-name: internal-centauri-carbon
addressType: IPv4
endpoints:
  - addresses:
      - ${CENTAURI_CARBON_IP}
ports:
  - port: 80
    name: http
    protocol: TCP
