kubernetes/apps/network/external-service/centauri-carbon/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-centauri-carbon
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  clusterIP: None
